# AIsim

./: 2.7.0  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build_test.bat  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.h  requirements.txt  run.bat  run_resim.bat  run_training.bat  set_qt_env.bat  setup_env.bat  simple_cmake.txt  start_all.bat  start_training.bat  test_qt.bat  test_qt.py  train_reisim.py
